fixed wrap issue

--- a/src/pages/Projects/Project.css
+++ b/src/pages/Projects/Project.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-flow: wrap;
     justify-content: center;
+    align-items: flex-start;
 }
 
 .project-icon {
